# internal/transport/http/dto/close_friend_dto.go
@@ -1,0 +1,9 @@
+package dto
+
+type AddCloseFriendRequest struct {
+	FriendID int64 `json:"friend_id" validate:"required"`
+}
+
+type CloseFriendResponse struct {
+	FriendID int64 `json:"friend_id"`
+}
